# report-foundry

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPER_HANDOFF_ROADMAP.md  OSS_REPORT_GENERATION_LANDSCAPE.md  PRINCIPLE_LATTICE.md  PROFESSIONAL_REPORT_SCHEMA.md  ROADMAP.md
examples/: daily_systems_brief.json
scripts/: ollama_daily_newsletter.py
src/report_foundry/: __init__.py  adequacy.py  citations.py  cli.py  connectors.py  draft.py  evidence.py  exhibit_adapters.py  exhibits.py  factory.py  ir.py  json_repair.py  package.py  qa.py  render.py  renderers.py  report_spec.py  research.py  research_intake.py  run_log.py  samples.py  source_extract.py
tests/: test_autonomy_worker_plan.py  test_citations.py  test_cli_factory.py  test_connectors.py  test_draft_ingestion.py  test_e2e_run.py  test_evidence_workflow.py  test_execution_plan.py  test_exhibits.py  test_factory_workflow.py  test_foundry_intake.py  test_ir.py  test_ollama_newsletter.py  test_package_manifest.py  test_principle_lattice.py  test_qa.py  test_render.py  test_renderer_adapters.py  test_report_spec.py  test_research_intake.py  test_research_run_log.py  test_research_worker.py  test_wizard.py
